Added animation and video encoding

--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,8 @@ repositories {
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
+    implementation 'org.jcodec:jcodec:0.2.3'
+    implementation 'org.jcodec:jcodec-javase:0.2.3'
 }
 compileKotlin {
     kotlinOptions {
